# skillctl

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.planning/: GTM.md  HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
docs/: 1-skill-format.md  REFERENCE.md  comparison-aws-agent-registry.md
examples/api-design-reviewer/: SKILL.md  skill.yaml
examples/basic-skill/: SKILL.md  skill.yaml
examples/dependency-scanner/: SKILL.md  skill.yaml
examples/minimal-skill/: SKILL.md
examples/parameterized-skill/: SKILL.md  skill.yaml
examples/tdd-workflow/: SKILL.md
plugin/: .mcp.json
plugin/scripts/: launch_mcp.sh  mcp_server.py
skillctl/: __init__.py  cli.py  config.py  diff.py  errors.py  github_auth.py  install.py  manifest.py  store.py  utils.py  validator.py  version.py
skillctl/eval/: __init__.py  _claude.py  agent_runner.py  cli.py  (+16 more)
tests/: conftest.py  test_api.py  test_audit.py  test_auth.py  test_budget.py  test_cli.py  test_cli_smoke.py  test_content_store.py  test_db.py  test_diff.py  test_doctor.py  test_eval_init.py  test_eval_runner.py  test_failure_analyzer.py  test_github_backend.py  test_install.py  test_integration_bedrock.py  test_llm_client.py  test_loop.py  test_manifest.py  test_mcp_server.py  test_package_build.py  test_plugin_structure.py  test_promotion_gate.py  test_provenance.py  test_skillctl_config.py  test_storage.py  test_utils.py  test_validator.py  test_variant_generator.py  test_web.py
(+56 files in other folders)
