[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillctl"
version = "0.1.0"
description = "Governance CLI for agent skills — validate, push, pull, and manage skill manifests"
readme = "README.md"
license = {text = "MPL-2.0"}
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "boto3>=1.34",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
]
optimize = [
    "anthropic>=0.40",
]

[project.scripts]
skillctl = "skillctl.cli:main"

[tool.setuptools.packages.find]
include = ["skillctl*"]
